hh/vdsp/vDSP_ramp.h


void vDSP_vrampmul(const float *__I, vDSP_Stride __IS, float *__Start,
                   const float *__Step, float *__O, vDSP_Stride __OS,
                   vDSP_Length __N) API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmulD(const double *__I, vDSP_Stride __IS, double *__Start,
                    const double *__Step, double *__O, vDSP_Stride __OS,
                    vDSP_Length __N) API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmuladd(const float *__I, vDSP_Stride __IS, float *__Start,
                      const float *__Step, float *__O, vDSP_Stride __OS,
                      vDSP_Length __N) API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladdD(const double *__I, vDSP_Stride __IS, double *__Start,
                       const double *__Step, double *__O, vDSP_Stride __OS,
                       vDSP_Length __N) API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmul2(const float *__I0, const float *__I1, vDSP_Stride __IS,
                    float *__Start, const float *__Step, float *__O0,
                    float *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul2D(const double *__I0, const double *__I1, vDSP_Stride __IS,
                     double *__Start, const double *__Step, double *__O0,
                     double *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmuladd2(const float *__I0, const float *__I1, vDSP_Stride __IS,
                       float *__Start, const float *__Step, float *__O0,
                       float *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd2D(const double *__I0, const double *__I1,
                        vDSP_Stride __IS, double *__Start, const double *__Step,
                        double *__O0, double *__O1, vDSP_Stride __OS,
                        vDSP_Length __N) API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmul_s1_15(const short int *__I, vDSP_Stride __IS,
                         short int *__Start, const short int *__Step,
                         short int *__O, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd_s1_15(const short int *__I, vDSP_Stride __IS,
                            short int *__Start, const short int *__Step,
                            short int *__O, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul2_s1_15(const short int *__I0, const short int *__I1,
                          vDSP_Stride __IS, short int *__Start,
                          const short int *__Step, short int *__O0,
                          short int *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd2_s1_15(const short int *__I0, const short int *__I1,
                             vDSP_Stride __IS, short int *__Start,
                             const short int *__Step, short int *__O0,
                             short int *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul_s8_24(const int *__I, vDSP_Stride __IS, int *__Start,
                         const int *__Step, int *__O, vDSP_Stride __OS,
                         vDSP_Length __N) API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd_s8_24(const int *__I, vDSP_Stride __IS, int *__Start,
                            const int *__Step, int *__O, vDSP_Stride __OS,
                            vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul2_s8_24(const int *__I0, const int *__I1, vDSP_Stride __IS,
                          int *__Start, const int *__Step, int *__O0, int *__O1,
                          vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd2_s8_24(const int *__I0, const int *__I1, vDSP_Stride __IS,
                             int *__Start, const int *__Step, int *__O0,
                             int *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));